<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">College App</string>

    <string name="bold" tools:ignore="ReferenceType">@font/latobold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/latoregular</string>
    <string name="light" tools:ignore="ReferenceType">@font/latolight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="about_college">Deenbandhu Chhotu Ram University of Science &amp; Technology, Murthal came into being on 6th November 2006 by upgrading erstwhile Chhotu Ram State College of Engineering, Murthal through an Act 29 of 2006 of the Legislature of the state of Haryana with the vision to facilitate and promote studies and research in emerging areas of higher education with focus on new frontiers of science, engineering, technology, architecture and management studies, humanities, and also to achieve excellence in these and connected fields. The University has been considered eligible for grants under Section 12(B) of UGC Act, 1956 in March, 2009.</string>
    <string name="about_cse">Department of Computer Science &amp; Engineering currently runs four programmes, two of which are UG programmes,one is PG programme and one is P.H.D programme.
        Intake for UG programmes are as follows:-
        -120 for Bachelor Of Technology
        -60 for Bachelor of Computer Applications
        Intake for PG programme(Master Of Technology) is 30 &amp; intake for P.H.D programme is based on seats availability.</string>
    <string name="about_ece">Department of Electronics &amp; Communication Engineering currently runs four programmes, one of which is UG programme,two are PG programmes and one is P.H.D programme.
        Intake for UG programme(Bachelor of Technology) is 120
        Intake for PG programmes are as follows:-
        -18 for Master Of Technology
        -18 for Master Of Technology(VLSI Design)
        Intake for P.H.D programme is based on seats availability.</string>

    <string name="about_elec">Department of Electrical Engineering currently runs five programmes, two of which are UG programmes,two are PG programmes and one is P.H.D programme.
        Intake for UG programme are as follows:-
        -60 for Bachelor Of Technology
        -60 for Bachelor Of Technology(Hindi)
        Intake for PG programmes are as follows:-
        -18 for Master Of Technology(Instrumentation &amp; Control)
        -18 for Master Of Technology(Electric Power System)
        Intake for P.H.D programme is based on seats availability.</string>

    <string name="about_mech">Department of Mechanical Engineering currently runs three programmes, one of which is UG programme,one is PG programme and one is P.H.D programme.
        Intake for UG programme(Bachelor of Technology) is 60
        Intake for PG programme(Master Of Technology) is 18 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_civil">Department of Civil Engineering currently runs three programmes, one of which is UG programme,one is PG programme and one is P.H.D programme.
        Intake for UG programme(Bachelor of Technology) is 60
        Intake for PG programme(Master Of Technology(Highway Engineering)) is 18 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_biomed">Department of Biomedical Engineering currently runs three programmes, one of which is UG programme,one is PG programme and one is P.H.D programme.
        Intake for UG programme(Bachelor of Technology) is 60
        Intake for PG programme(Master Of Technology) is 18 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_chemical">Department of Chemical Engineering currently runs three programmes, one of which is UG programme,one is PG programme and one is P.H.D programme.
        Intake for UG programme(Bachelor of Technology) is 60
        Intake for PG programme(Master Of Technology) is 18 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_archi">Department of Architecture currently runs five programmes, one of which is UG programme,three are PG programmes and one is P.H.D programme.
        Intake for UG programme(B.Arch.) is 60.
        Intake for PG programmes are as follows:-
        -10 for Master Of Architecture(Sustainable Architecture)
        -20 for Master Of Planning(Urban &amp; Rural)
        -18 for Master Of Technology(Construction and Real Estate Management)
        Intake for P.H.D programme is based on seats availability.</string>

    <string name="about_chemistry">Department of Chemistry currently runs three programmes, one of which is Dual Degree programme,one is PG programme and one is P.H.D programme.
        Intake for Dual Degree programme(B.Sc.(Hons.)-Chemistry + M.Sc.(Chemistry)) is 60
        Intake for PG programme(Master Of Science(Chemistry)) is 60 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_physics">Department of Physics currently runs three programmes, one of which is Dual Degree programme,one is PG programme and one is P.H.D programme.
        Intake for Dual Degree programme(B.Sc.(Hons.)-Physics + M.Sc.(Physics)) is 60
        Intake for PG programme(Master Of Science(Physics)) is 60 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_maths">Department of Maths currently runs three programmes, one of which is Dual Degree programme,one is PG programme and one is P.H.D programme.
        Intake for Dual Degree programme(B.Sc.(Hons.)-Maths + M.Sc.(Maths)) is 60
        Intake for PG programme(Master Of Science(Maths)) is 60 &amp; intake for P.H.D programme is based on seats availability.</string>

    <string name="about_biotech">Department of Biotechnology currently runs five programmes, one of which is UG programme,one is Dual Degree programme,two are PG programmes and one is P.H.D programme.
        Intake for UG programme(B.Tech.) is 60.
        Intake for Dual Degree programme(B.Sc.(Hons.)-Biotechnology + M.Sc.(Biotechnology)) is 60.
        Intake for PG programmes are as follows:-
        -18 for Master Of Technology
        -30 for Master Of Science(Biotechnology)
        Intake for P.H.D programme is based on seats availability.</string>

    <string name="about_ceees">Department of CEEES currently runs four programmes, one of which is UG programme,two are PG programmes and one is P.H.D programme.
        Intake for UG programme(B.Tech.) is 30.
        Intake for PG programmes are as follows:-
        -18 for Master Of Technology(Energy and Environment Management)
        -18 for Master Of Science(Environment Science)
        Intake for P.H.D programme is based on seats availability.</string>

    <string name="about_management">Department of Management currently runs four programmes, one of which is Dual Degree programme,two are PG programmes and one is P.H.D programme.
        Intake for Dual Degree programme(BBA + MBA) is 60.
        Intake for PG programmes are as follows:-
        -60 for Master Of Business Administration
        -30 for Master In Hospital Administration
        Intake for P.H.D programme is based on seats availability.</string>

    <string name="about_humanities">Department of Humanities currently runs five programmes, two of which are certificate programmes,one is Dual Degree programme,one is PG programme and one is P.H.D programme.
        Intake for Certificate Course In French is 30.
        Intake for Certificate Course In German is 30.
        Intake for Dual Degree programme(B.A.(Hons.)-English + M.A.(Biotechnology)) is 60.
        Intake for PG programme(M.A. English) is 30.
        Intake for P.H.D programme is based on seats availability.</string>


    <string name="college_name">Deenbandhu Chhotu Ram University Of Science &amp; Technology, Murthal</string>
    <string name="clg_address">Address:- DCRUST, Murthal, Sonipat, Haryana, India - 131039</string>
    <string name="contact_no">0130-2484173</string>
    <string name="library_link">https://dcrustlibrary.com/#/home</string>
    <string name="mail_link">mailto:info@dcrustm.org</string>
    <string name="linkedin_link">https://www.linkedin.com/school/cse-dcrust</string>
    <string name="twitter_link">https://twitter.com/MurthalDcrust</string>

    <string name="cse">Computer Science &amp; Engineering</string>
    <string name="ece">Electronics &amp; Communication Engineering</string>
    <string name="elec">Electrical Engineering</string>
    <string name="mech">Mechanical Engineering</string>
    <string name="civil">Civil Engineering</string>
    <string name="biomed">Biomedical Engineering</string>
    <string name="chemical">Chemical Engineering</string>
    <string name="archi">Architecture</string>
    <string name="chem">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="maths">Maths</string>
    <string name="biotech">Biotechnology</string>
    <string name="cease">Enviromental</string>
    <string name="management">Management</string>
    <string name="humanities">Humanities</string>
    <string name="dcrust_website_link">https://www.dcrustm.ac.in/</string>

    <string name="stuCoord">Student Coordinator :</string>
    <string name="facCoord">Faculty Coordinator :</string>

    <string name="intro">Hey! I’m an Android Developer and an undergrad student of DCRUST-Murthal (2020-24). Though I started learning android way back, but the idea of creating DCRUST aroused due to the hassle which I faced in accessing the website and the opportunities I missed. Yet, no worries this problem is now being tackled!</string>
    <string name="skills">I am eager to apply my skills and knowledge to create innovative and user-friendly mobile applications. With a solid foundation in programming and a passion for technology, I am confident in my ability to create high-quality apps that meet the needs of users.</string>
    <string name="queries">For any queries, contact me through the following links :</string>
    <string name="dev_name">Harshit Yadav</string>
    <string name="gmaillink">mailto:8708440748y@gmail.com</string>
    <string name="linkedinlink">https://www.linkedin.com/in/harshit-yadav-913081200/</string>
    <string name="githublink">https://github.com/raoharshit</string>

    <array name="Batch">
        <item>Select Batch</item>
        <item>2023-27</item>
        <item>2022-26</item>
        <item>2021-25</item>
        <item>2020-24</item>
        <item>2019-23</item>
    </array>

    <string-array name="theme">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>