<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundCol"
    tools:context=".Developers.Developers">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/appbarDEV"
                    style="@style/ToolbarColoredBackArrow"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/backgroundCol"
                    app:title="Developers"
                    app:titleTextColor="@color/titleBarColor" />

            </com.google.android.material.appbar.AppBarLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarCL"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbarCL"
                android:layout_margin="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:padding="15dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp">

                <RelativeLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="210dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/devName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:fontFamily="@font/poppinsemibold"
                                    android:text="@string/dev_name"
                                    android:textColor="@color/white"
                                    android:textSize="22sp" />

                                <TextView
                                    android:id="@+id/devInfo"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsemibold"
                                    android:text="21 | Rohtak, India."
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/devImage"
                                android:layout_width="100dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1.5"
                                android:src="@drawable/profile_picture" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/info"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/introText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/intro"
                            android:textColor="@color/white"
                            android:textSize="14sp" />


                        <TextView
                            android:id="@+id/queriesText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/queries"
                            android:textColor="@color/white"
                            android:textSize="14sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/buttonsGL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <ImageView
                            android:id="@+id/gmail"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:src="@drawable/ic_gmail" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/linkedin"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:src="@drawable/ic_linkedin" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/github"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:src="@drawable/ic_githublogo" />


                    </LinearLayout>


                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>

    </RelativeLayout>


</ScrollView>